vbnc/vbnc/tests/Errors/30311-52.vb
Class Date1
    Public Shared Function Main() As Integer
        Dim a As Date = TimeSpan.FromSeconds(1)
    End Function
End Class